# singleton_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
include/: Logger.h
srcs/: Logger.cpp
